<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_dark_green" >

    <ImageView
        android:id="@+id/splash_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/desc_splash_title" />

    <RelativeLayout
        android:id="@+id/splash_screen_crosses"
        android:layout_width="280dp"
        android:layout_height="250dp"
        android:layout_below="@+id/splash_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/transparent" >

        <ImageView
            android:id="@+id/cross_1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/desc_splash_cross_1" />

        <ImageView
            android:id="@+id/nought_1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/desc_splash_nought_1" />

        <ImageView
            android:id="@+id/cross_3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/desc_splash_cross_3" />
    </RelativeLayout>

</RelativeLayout>